Practicing the git commands.

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,8 @@
     <title>Coursera0</title>
 </head>
 <body>
-    <p>Nice page for github</p>
+    <p>Nice page for github<br>a
+    Added browser sync support<br>
+    Practicing the git commands (add, commit, push)</p>
 </body>
 </html>
