--- a/module4_solution/index.html
+++ b/module4_solution/index.html
@@ -2,7 +2,21 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Module 4 Solution Starter</title>
+  <title>Module 4 Solution</title>
+  <style>
+    body {
+      color: rgb(209, 209, 209);
+      font-size: 1.5em;
+      background-color: rgb(36, 36, 36);
+    }
+    strong {
+      color: white;
+      font-size: 1.1em;
+    }
+    h1 {
+      color: white;
+    }
+  </style>
   <script>
     var names = []; // DO NOT REMOVE
   </script>
@@ -11,6 +25,11 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>Module 4 Solution Starter</h1>
+  <h1>Module 4 Solution</h1>
+  <hr>
+  <p>Right Click on this site and press <strong>Inspect</strong> to open the developer tools.</p>
+  <p>Go to the <strong>Console</strong> tab to see the javascript output.</p>
+  <hr>
+  <p>Right Click and press <strong>View page source</strong> to see the html files and links to the javascript files.</p>
 </body>
 </html>
